postgres-deployment.yaml
kind:apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeclaim:
            claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts: 
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
        # env:
        #   - name: PGPASSWORD
        #     valueFrom:
        #       secretKeyRef:
        #         name: pgpassord
        #         key: PGPASSWORD
