client-cluster-ip-service.yaml
kind:apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    component: client
  ports:
  - port: 3000
    targetPort: 3000
