server-cluster-ip-service.yaml
kind:apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
